# interview-insight

./: .env.example  .gitignore  CLAUDE.md  neon_backup.sql  neon_backup_clean.sql  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.local.json
apps/api/: .env.example  =5.3.0  check_db_schema.py  pyproject.toml  pytest.ini  requirements.txt  verify_fix.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_add_auth_fields.py  003_add_interviewer_id_to_jobs.py  004_add_interviewer_user_id_and_summary.py  005_add_clerk_id_to_user.py  006_add_job_id_to_interview_analyses.py  d84fa060098e_make_interviewer_company_optional.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: analysis.py  interviewers.py  jobs.py  login.py  uploads.py  users.py
apps/api/app/core/: __init__.py  celery_utils.py  clerk_auth.py  config.py  database.py  security.py
apps/api/app/models/: __init__.py  base.py  enums.py  interview_analysis.py  interviewer.py  processing_job.py  user.py
apps/api/app/schemas/: __init__.py  analysis.py  interviewer.py  job.py  token.py  upload.py  user.py
apps/api/app/services/: __init__.py  interviewer_service.py  job_service.py  s3_service.py
apps/api/tests/: __init__.py  conftest.py
apps/api/tests/integration/: __init__.py  test_analysis.py  test_auth.py  test_database.py  test_interviewers.py  test_jobs_list.py  test_reproduce_interviewer_creation_issue.py  test_signup.py  test_uploads.py
apps/api/tests/unit/: __init__.py
apps/api/tests/unit/core/: test_config.py  test_security.py
apps/api/tests/unit/endpoints/: __init__.py  test_jobs.py
apps/api/tests/unit/models/: test_interview_analysis.py  test_interviewer.py  test_processing_job.py  test_user.py
apps/api/tests/unit/services/: test_job_service.py
docker/: docker-compose.test.yml  docker-compose.yml
docs/: VibeCheck_PRD.md  auth-roadmap.xml  fix-ML-bugs.xml  fixing-celery-ML-summarizer.xml  fixing-uploading-features-bug.xml  implementation_plan.xml  phase-4-job-queue-roadmap.xml  (+8 more)
workers/: Dockerfile  README.md  pyproject.toml  requirements.txt
workers/app/: __init__.py  main.py  tasks.py
workers/app/core/: config.py  database.py
workers/app/services/: __init__.py  s3.py  summarization.py  transcription.py
workers/tests/: conftest.py  test_ml_services.py  test_tasks.py
(+22 files in other folders)
