[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecheck-worker"
version = "0.1.0"
description = "VibeCheck ML Worker - Audio transcription and sentiment analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "sqlmodel>=0.0.14",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
ml = [
    "faster-whisper>=1.0.0",
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "scipy>=1.11.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
